fix issue with navbar overflowing onto content under some circumstances when manu nav bar items exist or if the screen width is resized down

--- a/src/plonetheme/booster/theme/less/partials/base.less
+++ b/src/plonetheme/booster/theme/less/partials/base.less
@@ -8,7 +8,6 @@
 
 body{
 
-    padding-top: 63px;
     color: @brand-darker;
     font-weight: 400;
 }
